--- a/src/style.css
+++ b/src/style.css
@@ -247,6 +247,19 @@ main section img {
   width: 100%;
   object-fit: contain;
 }
+main section iframe#youtubeiFrame {
+  max-width: 900px;
+  max-height: 400px;
+  width: 100%;
+  object-fit: contain;
+  aspect-ratio: 16/9;
+}
+main section div#twitterEmbed {
+  display: flex;
+  max-width: auto;
+  flex-direction: column;
+  align-items: center;
+}
 main section img#topImage {
   max-width: 100%;
   max-height: 100%;
