記事の内容編集

--- a/src/style.css
+++ b/src/style.css
@@ -245,6 +245,10 @@ main section h4 {
 main section p {
   font-size: 1em;
 }
+main section p span.big {
+  font-size: 2em;
+  font-weight: 800;
+}
 main section img {
   max-width: 900px;
   max-height: 400px;
