新しい記事の反映や少々作成プログラムの修正

--- a/src/style.css
+++ b/src/style.css
@@ -276,12 +276,6 @@ main section img#topImage {
   border-radius: 15px;
   object-fit: cover;
 }
-main section div#twitterProfileEmbed:hover {
-  background: rgb(247, 249, 249);
-}
-main section div#twitterProfileEmbed:active {
-  background: rgba(230, 236, 240, 0.7);
-}
 main section div#twitterProfileEmbed {
   max-width: 550px;
   margin: auto;
@@ -292,6 +286,12 @@ main section div#twitterProfileEmbed {
   background: white;
   color: black;
   transition: 0.2s;
+}
+main section div#twitterProfileEmbed:active {
+  background: rgba(230, 236, 240, 0.7);
+}
+main section div#twitterProfileEmbed:hover {
+  background: rgb(247, 249, 249);
 }
 main section div#twitterProfileEmbed a {
   display: block;
@@ -415,7 +415,8 @@ main section#description {
   text-align: center;
 }
 main section#blogList {
-  overflow: hidden;
+  overflow-x: clip;
+  overflow-y: visible;
 }
 main section#blogList h2 {
   margin-bottom: 0;
